--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "displayName": "WOL With Zones",
   "name": "homebridge-wol-zone",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "A short description about what your plugin does.",
   "license": "Apache-2.0",
   "repository": {
@@ -23,7 +23,10 @@
     "prepublishOnly": "npm run lint && npm run build"
   },
   "keywords": [
-    "homebridge-plugin"
+    "homebridge-plugin",
+    "mac",
+    "windows",
+    "wol"
   ],
   "dependencies": {
     "ping": "^0.4.2",
