--- a/package.json
+++ b/package.json
@@ -19,8 +19,9 @@
   "scripts": {
     "lint": "eslint src/**.ts --max-warnings=0",
     "watch": "npm run build && npm link",
-    "build": "rimraf ./dist && tsc",
-    "prepublishOnly": "npm run lint && npm run build"
+    "build": "npm run version && rimraf ./dist && tsc",
+    "prepublishOnly": "npm run lint && npm run build",
+    "version": "node ./build/build-pre.js"
   },
   "keywords": [
     "homebridge-plugin",
@@ -38,6 +39,7 @@
     "@types/wake_on_lan": "^0.0.30",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
+    "colors": "^1.4.0",
     "eslint": "^8.0.1",
     "homebridge": "^1.3.5",
     "nodemon": "^2.0.20",
