--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "displayName": "WOL With Zones",
   "name": "homebridge-wol-zone",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "description": "A short description about what your plugin does.",
   "license": "Apache-2.0",
   "repository": {
@@ -31,11 +31,13 @@
   ],
   "dependencies": {
     "ping": "^0.4.2",
+    "ssh2": "^1.14.0",
     "wake_on_lan": "^1.0.0"
   },
   "devDependencies": {
     "@types/node": "^16.10.9",
     "@types/ping": "^0.4.1",
+    "@types/ssh2": "^1.11.13",
     "@types/wake_on_lan": "^0.0.30",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
