--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "displayName": "WOL With Zones",
   "name": "homebridge-wol-zone",
-  "version": "1.1.2",
+  "version": "1.1.2-1b",
   "description": "A short description about what your plugin does.",
   "license": "Apache-2.0",
   "repository": {
