--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,7 +1,7 @@
 name: Publish to NPM
 on:
   release:
-    types: [ created ]
+    types: [ published ]
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -15,7 +15,13 @@ jobs:
           registry-url: 'https://registry.npmjs.org'
       - name: Install dependencies and build 🔧
         run: npm ci && npm run build
+      - name: Publish beta package on NPM 📦
+        if: 'github.event.prerelease'
+        run: npm publish --tag beta
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
       - name: Publish package on NPM 📦
+        if: '!github.event.prerelease'
         run: npm publish
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
